style.css
:root{
    --main-font: 'Fondamento', cursive;
    --body-font: 'Cabin', sans-serif;
    --grayishPrim: #af7c74;
    --goldieSec:#b78876;
    --third: 	#c99e87;
    --fourth: 	#d8e3e8;
    --fifthCw: 	#d9b7a5;
  }

div.container
{
    
    margin-top:25px;
}

.navSec{
   height: 15%;
}

.experience{
    background:linear-gradient(to bottom,var(--third), white )

}

.cv,.weather{
    transition: 1s ease;
}

.cv:hover, .weather:hover{
   
    -webkit-transform: scale(1.2);
    -ms-transform: scale(1.2);
    transform: scale(1.2);
    transition: 1s ease;

}
.weddingPic{
    
    background:linear-gradient(to bottom,	var(--fifthCw), white );
    background-size:cover ;

}

.secondSec .cv h1:hover, .secondSec .cv:hover{
    opacity: 1;
}

.borderBox{
    border: solid 2px black
}


.name, .education{
   
    background:linear-gradient(to bottom, var(--goldieSec), white)
}

.navSec ul li {
    font-size: 25px;
}

.navColor{
    
    background:linear-gradient(to bottom, var(--fourth), white )
}

.myPic{
    background:linear-gradient(to bottom,	var(--fifthCw), white )
}

.quote{
   
    background:linear-gradient( to top, var(--fourth), white) ;
}




.myImg{
  width: 500px;
  height: 100%;

}

.weather{
    background-image: url(./images/feathersite\ theme.gif);
    background-repeat: no-repeat;
    background-size: cover;
    color: black;
    font-family: 'Cinzel', serif;
    font-weight: 800;

}

.cv{
    background:linear-gradient(to bottom,	var(--fourth), white )
}
footer
{
    color:white;
    height:60px;
    text-align: center;
    line-height: 25px;
    font-size: 18px;
    margin-top: 5px;
}
p.footer
{
margin-top:15px;
padding-top: 15px;
text-align: center;

}
p
{
    margin: 20px;
    font-family: 'Acme', sans-serif;

font-weight: 400;
font-size: 20px;
font-style: italic;
   
    
  
}
h1{
    
    font-family: 'Cinzel', serif;

    padding:0px;
    margin-left:10px;
 
   
}
#aboutMe{
    
    font-family: 'Cinzel', serif;

    
    font-weight: 800;
    text-align: center;
   
}

.navbar
{
    margin: 0%;
    padding:0px;
    background: #4aaaa500;
}


a.navbar-brand
{

margin:5px;

padding:0px;
}

.bg-dark
{
   
}


h2{
    font-family: 'Cinzel', serif;
    font-weight: bold;
    text-align: center;
    box-shadow: 5px 5px #777;
    margin: 5px;
}

.nav-item
{
font-family: 'Cinzel', serif;
font-weight: 500px;

}




img
{
  
  
   

}

h3{
    position: absolute;
   top:100px;
  
}


.extend
{
    background-image: linear-gradient(to left, #2a58c3, black);
    padding-top: 7%;
    
}



.wave
{
    width: 100%;
    background-image: linear-gradient(to left, #4aaaa5, black);
    
}

.card-body{
    
    background: #5676c1;
}
.code{
    color: yellow
}

.btn {
    
   
    text-align: center;
    opacity: 0;
    transition: opacity .35s ease;
  }

  .btn {
    
   
    text-align: center;
    
  
    z-index: 1;
  }

.card:hover  .btn {

   

opacity: 1;

}


.card:hover .card-body {
background: rgba(55, 84, 93, 0.664);
transition:  0.5s ease;
}



/* .fab {
margin: 20px;
width: 100%;
float: left;
clear: both;
}
.fas {
    margin: 20px;
    width: 100%;
    float: left;
    clear: both;
    } */

/* 
.fab:hover{
    transition:  2.0s ease;
    transform: scale(1.5);
    
}

.fas:hover{
    transition:  2.0s ease;
    transform: scale(1.5);

} */

.fa-html5:hover{
    color:orange
}

.fa-css3-alt:hover{
    color: skyblue;
}

.fa-js-square{
    color:darkgoldenrod
}
.fa-bootstrap:hover{
    color:purple
}

.fa-node:hover{
    color: limegreen
}

.fab,  .fas {
    color: rgb(13, 52, 116);
    text-decoration: none;

    border-radius: 50%;
}
/* 
a:hover 
{
     color:rgb(253, 218, 18); 
     text-decoration:none; 
     cursor:pointer;  
} */

p{
    
}

.fa-node-js:hover{
    color: green;
}

.fa-js:hover{
    color:yellow
}

.fa-git-alt:hover{
    color: tomato;
}

.fa-gripfire:hover{
color: orange;
}

.fa-language:hover{
    color: blue;
}

.sql:hover{
    color: skyblue;
}

.navy a{
text-decoration: none;
color: black;
font-family: 'Caveat', cursive;


}

.card-title{
    text-align: center;
    font-family: 'Cinzel', serif;
    font-weight: 800;
}

.icon img{
    width: 200px;
}

.iconN img{
    width: 200px;
}

